# red-avi-tamu

./: .gitignore  README.md
Archive/WTS/Original Implementation/: Serial_Communication.py
Archive/WTS/PyQT_Clone/: GUI_Architecture.py  Master_File.py
Archive/WTS/Virtual_Teensy/: Test_Reader.py  Virtual_Teensy.py
Archive/WTS/WTS_teensy/: WTS_teensy.ino
Data Analysis/: Plot Maker.ipynb
Elysium/: README.md
Elysium/Elysium_GUI/: Elysium_GUI  Elysium_GUI.pro  Makefile  README.md  moc_GUI_Main_Window.cpp
Elysium/Elysium_GUI/Assets/: main.cfg
Elysium/Elysium_GUI/Headers/: Frame_with_Title.h  GUI_APP.h  GUI_COM_Window.h  GUI_CTRL_Window.h  GUI_DAQ_Window.h  GUI_Graph_Window.h  GUI_Main_Window.h  Sensor.h  Standard_Label.h  State_Machine.h  Valves.h
Elysium/Elysium_GUI/Sources/: Frame_with_Title.cpp  GUI_COM_Window.cpp  GUI_CTRL_Window.cpp  GUI_DAQ_Window.cpp  GUI_Graph_Window.cpp  GUI_Main_Window.cpp  Sensor.cpp  Standard_Label.cpp  State_Machine.cpp  Valves.cpp  (+1 more)
Elysium/GIGAPCB/: GIGAPCB-LAPTOP-A93BNMFG.kicad_prl  GIGAPCB.kicad_pcb  GIGAPCB.kicad_pro  GIGAPCB.kicad_sch  fp-info-cache
Elysium/Real_Time_Graph_Demo/: CMakeLists.txt
Elysium/Real_Time_Graph_Demo/Sources/: main.cpp
Elysium/Virtual_Teensy/: Makefile  README.md  Virtual_Teensy  Virtual_Teensy.cpp  Virtual_Teensy.h  Virtual_Teensy.pro  Virtual_Teensy.py  main.cpp
Elysium/Virtual_Teensy2/: Makefile  Virtual_Teensy2.0  Virtual_Teensy2.0.pro
Original Implementation/: GUI_Architecture.py
WTS Copy PyQT/Tutorial/: app.py
WTS/PyQT_Clone/: GUI_Architecture.py
WTS/WTS_teensy/: WTS_teensy_2.ino
(+157 files in other folders)
